--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,21 @@
-<zip dest="dist/thumbnailator.zar">
-	<file src="src/main/expath-pkg.xml" dest="expath-pkg.xml" />
-	<file src="src/main/basex.xml" dest="basex.xml" />
-	<file src="src/main/content/thumbnailator.xqm" dest="content/thumbnailator.xqm" />
-	<file src="src/main/content/thumbnailator-0.4.5.jar" dest="content/thumbnailator-0.4.5.jar" />
-</zip>
+<!--  @see http://cxan.org/faq#add-pkg  -->
+<repo abbrev="ex-thumbnailator">
+  <pkg abbrev="ex-thumbnailator" id="expkg-zone58.image.thumbnailator">
+    <name>expkg-zone58.image.thumbnailator</name>
+    <abstract>Create a thumbnail from a file path.</abstract>
+    <author id="coobird">coobird</author>
+    <maintainer id="abunce">Andy Bunce</maintainer>
+    <home>https://github.com/coobird/thumbnailator</home>
+    <category id="libs">Library</category>
+    <tag>image</tag>
+    <tag>resize</tag>
+    <tag>graphic</tag>
+    <version num="2.0.0">
+      <dependency processor="basex"/>
+      <file name="ex-dotml-0.0.5.xar" role="pkg"/>
+    </version>
+    <version num="2.0.1">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+  </pkg>
+</repo>
