--- a/package.xml
+++ b/package.xml
@@ -13,5 +13,8 @@
     <version num="4.1.4">
       <!-- generated: {fn:current-dateTime()} -->
     </version>
+    <version num="4.1.5">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
   </pkg>
 </repo>
