--- a/package.xml
+++ b/package.xml
@@ -16,5 +16,38 @@
     <version num="4.1.5">
       <!-- generated: {fn:current-dateTime()} -->
     </version>
+    <version num="5.0.0">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.1">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.2">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.3">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.4">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.5">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.7">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.8">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.9">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.10">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+    <version num="5.0.11">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
   </pkg>
 </repo>
