basex v9 stream->lazy

--- a/package.xml
+++ b/package.xml
@@ -49,5 +49,14 @@
     <version num="5.0.11">
       <!-- generated: {fn:current-dateTime()} -->
     </version>
+  <version num="6.0.0">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+  <version num="6.0.1">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
+  <version num="6.0.2">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
   </pkg>
 </repo>
