[MOD] update to support BaseX 9.4.5 and use thumbnailator 4.13

--- a/package.xml
+++ b/package.xml
@@ -64,5 +64,8 @@
   <version num="7.0.1">
       <!-- generated: {fn:current-dateTime()} -->
     </version>
+  <version num="8.0.1">
+      <!-- generated: {fn:current-dateTime()} -->
+    </version>
   </pkg>
 </repo>
